<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_weather">

        <SwitchPreferenceCompat
            android:key="weather_enabled"
            android:title="@string/pref_title_weather_enabled"
            android:summary="@string/pref_summary_weather_enabled"
            android:defaultValue="false"
            android:persistent="true" />

        <ListPreference
            android:key="weather_display_mode"
            android:title="@string/pref_title_weather_display_mode"
            android:entries="@array/pref_weather_mode_titles"
            android:entryValues="@array/pref_weather_mode_values"
            android:defaultValue="room"
            android:persistent="true" />

        <EditTextPreference
            android:key="weather_city"
            android:title="@string/pref_title_weather_city"
            android:summary="@string/pref_summary_weather_city"
            android:defaultValue=""
            android:inputType="text"
            android:persistent="true" />

        <!-- inputType="text" because "numberDecimal|numberSigned" on Android 10
             blocks entering a minus sign and decimal point simultaneously.
             The value is parsed robustly in code (comma or dot accepted). -->
        <EditTextPreference
            android:key="weather_lat"
            android:title="@string/pref_title_weather_lat"
            android:summary="@string/pref_summary_weather_lat_lon"
            android:defaultValue=""
            android:inputType="text"
            android:persistent="true" />

        <EditTextPreference
            android:key="weather_lon"
            android:title="@string/pref_title_weather_lon"
            android:summary="@string/pref_summary_weather_lat_lon"
            android:defaultValue=""
            android:inputType="text"
            android:persistent="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_weather_horizons">

        <SwitchPreferenceCompat
            android:key="weather_show_1h"
            android:title="@string/pref_title_weather_show_1h"
            android:summary="@string/pref_summary_weather_show_1h"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="weather_show_3h"
            android:title="@string/pref_title_weather_show_3h"
            android:summary="@string/pref_summary_weather_show_3h"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="weather_show_6h"
            android:title="@string/pref_title_weather_show_6h"
            android:summary="@string/pref_summary_weather_show_6h"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="weather_show_daily"
            android:title="@string/pref_title_weather_show_daily"
            android:summary="@string/pref_summary_weather_show_daily"
            android:defaultValue="true"
            android:persistent="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_weather_timing">

        <EditTextPreference
            android:key="weather_slide_duration_sec"
            android:title="@string/pref_title_weather_slide_duration"
            android:summary="@string/pref_summary_weather_slide_duration"
            android:defaultValue="5"
            android:inputType="number"
            android:persistent="true" />

        <EditTextPreference
            android:key="weather_refresh_min"
            android:title="@string/pref_title_weather_refresh"
            android:summary="@string/pref_summary_weather_refresh"
            android:defaultValue="30"
            android:inputType="number"
            android:persistent="true" />

        <Preference
            android:key="action_weather_test"
            android:title="@string/pref_title_weather_test"
            android:summary="@string/pref_summary_weather_test" />

    </PreferenceCategory>

</PreferenceScreen>
